kubernetes/addons/iam/zitadel/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zitadel-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://zitadel.default.javiersant.com"
    gethomepage.dev/description: Zitadel Dashboard
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: zitadel.svg
    gethomepage.dev/name: Zitadel
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zitadel.default.javiersant.com`)
      kind: Rule
      # middlewares:
      #   - name: oauth2-proxy
      #     namespace: iam
      services:
        - kind: Service
          name: zitadel
          scheme: h2c
          passHostHeader: true
          port: 8080
  tls:
    secretName: wildcard-javiersant-com-tls
